# my-mini-gpt-script

./: README.md  pyproject.toml
cs336_basics/: CausalMultiheadSelfAttention.py  Cross_entropy.py  RMSNorm.py  Rope.py  SwiGLU_FFN.py  TransformerLM.py  Transformer_block.py  adamW.py  checkpointing.py  embedding.py  get_batch.py  inference.py  linear_module.py  lr_gc.py  scaled_dot_product_attention.py  tokenizer.py  train_bpe.py
cs336_basics/pipeline/: bpetrain.py  tokenizertrain.py  trainmodel.py
